--- a/producto.html
+++ b/producto.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <!-- Inyección del header -->
   <div id="header-placeholder"></div>
   <script>
     fetch('header.html')
@@ -17,34 +18,42 @@
       });
   </script>
 
-  <!-- Contenido principal: Detalles del Producto -->
-  <main class="content">
-    <h1 id="product-name">Producto</h1>
-    <p class="product-description">Descripción del producto...</p>
-    <p class="product-price" id="product-price">Precio: $10</p>
-
-    <!-- Botones de acción -->
-    <div class="product-actions">
-      <!-- Añadir atributos data-name y data-price al botón -->
-      <button class="btn buy-btn">Añadir al carrito</button>
-      <a href="sellos.html" class="btn">Ir al sello</a>
-    </div>
-
-    <!-- Información adicional -->
-    <div class="product-info">
-      <h3>Detalles del Producto</h3>
-      <p>Ejemplo: Una pista, CD, vinilo, etc.</p>
+  <main class="product-detail">
+    <div class="product-container">
+      <img id="product-image" src="assets/images/default.jpg" alt="Imagen del producto">
+      <div class="product-info">
+        <h2 id="product-title">Título del Producto</h2>
+        <p id="product-description">Descripción detallada del producto.</p>
+        <p id="product-price" class="price">$0.00</p>
+        <button id="add-to-cart" data-id="">Añadir al Carrito</button>
+        <button id="add-to-favorites" data-id="">♡ Favorito</button>
+      </div>
     </div>
   </main>
 
-  <!-- Botón de Ayuda Flotante -->
-  <a href="ayuda.html" class="help-button" title="Ayuda">?</a>
-
-  <!-- Footer común -->
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 UnderSounds. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <!-- Carga del archivo JS con la funcionalidad -->
+  <script src="js/app.js"></script>
+  <script>
+    // Obtener el id del producto de la URL (?id=...)
+    const params = new URLSearchParams(window.location.search);
+    const productId = params.get('id');
+
+    // Asegúrate de que la variable productCatalog ya está definida en app.js
+    const product = productCatalog[productId];
+
+    if (product) {
+      document.getElementById('product-image').src = product.image;
+      document.getElementById('product-title').textContent = product.title;
+      document.getElementById('product-description').textContent = product.description || 'Sin descripción disponible.';
+      document.getElementById('product-price').textContent = `$${product.price}`;
+      document.getElementById('add-to-cart').setAttribute('data-id', productId);
+      document.getElementById('add-to-favorites').setAttribute('data-id', productId);
+    }
+  </script>
 </body>
 </html>
