--- a/cancion.html
+++ b/cancion.html
@@ -8,12 +8,18 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <!-- Inyección del header -->
   <div id="header-placeholder"></div>
   <script>
-     fetch('header.html')
+    fetch('header.html')
       .then(response => response.text())
       .then(data => {
         document.getElementById('header-placeholder').innerHTML = data;
+        // Después de cargar el header, inicializamos el carrito
+        setTimeout(() => {
+          updateCartCount();
+          updateCartDropdown();
+        }, 100);
       });
   </script>
 
@@ -58,5 +64,6 @@
   </footer>
 
   <script src="js/main.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
