--- a/checkout.html
+++ b/checkout.html
@@ -3,9 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UnderSounds - Pago</title>
+  <title>UnderSounds - Checkout</title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+    /* Reset y fuente */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Nunito', sans-serif;
+      background: #f5f5f5;
+      color: #333;
+      line-height: 1.6;
+    }
+    /* Contenedor principal con dos columnas */
+    .container {
+      display: flex;
+      justify-content: space-between;
+      padding: 20px;
+    }
+    /* Estilos para los paneles */
+    .panel {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      width: 48%;
+    }
+    /* Espaciado para el contenido del pedido */
+    #cart-items, #cart-total {
+      margin-bottom: 20px;
+    }
+    h2 {
+      margin-bottom: 20px;
+      color: #2c3e50;
+    }
+    /* Estilos para formularios */
+    form label {
+      display: block;
+      margin: 10px 0 5px;
+    }
+    form input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+    /* Botones */
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      background: #3498db;
+      color: #fff;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    button:hover {
+      background: #2980b9;
+    }
+    /* Flecha de navegación */
+    .nav-arrow {
+      display: inline-block;
+      margin-top: 20px;
+      cursor: pointer;
+      font-size: 24px;
+      color: #3498db;
+    }
+    /* Ocultar secciones */
+    .hidden {
+      display: none;
+    }
+    /* Footer sencillo */
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #fff;
+      margin-top: 20px;
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    }
+  </style>
 </head>
 <body>
   <!-- Inyección del header -->
@@ -15,67 +95,94 @@
       .then(response => response.text())
       .then(data => {
         document.getElementById('header-placeholder').innerHTML = data;
+        // Inicializar carrito luego de cargar el header
+        setTimeout(() => {
+          updateCartCount();
+          updateCartDropdown();
+        }, 100);
       });
   </script>
 
-  <main class="checkout">
-    <h2>Resumen del Pedido</h2>
-    <div id="order-summary"></div>
-    <div id="order-total"></div>
-    <h3>Opciones de Pago</h3>
-    <form id="payment-form">
-      <label for="cardNumber">Número de Tarjeta:</label>
-      <input type="text" id="cardNumber" name="cardNumber" required>
-      <label for="expiry">Fecha de Expiración:</label>
-      <input type="text" id="expiry" name="expiry" placeholder="MM/AA" required>
-      <label for="cvc">CVC:</label>
-      <input type="text" id="cvc" name="cvc" required>
-      <button type="submit">Confirmar Pago</button>
-    </form>
+  <main class="container">
+    <!-- Panel izquierdo: Resumen del Pedido -->
+    <div class="panel" id="order-panel">
+      <h2>Resumen del Pedido</h2>
+      <div id="cart-items"></div>
+      <div id="cart-total"></div>
+    </div>
+
+    <!-- Panel derecho: Información del Cliente y Método de Pago -->
+    <div class="panel" id="info-panel">
+      <!-- Sección 1: Información del Cliente -->
+      <div id="customer-info">
+        <h2>Información del Cliente</h2>
+        <form id="customer-form">
+          <label for="nombre">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" required>
+          <label for="apellido">Apellido:</label>
+          <input type="text" id="apellido" name="apellido" required>
+          <label for="email">Correo Electrónico:</label>
+          <input type="email" id="email" name="email" required>
+          <label for="direccion">Dirección:</label>
+          <input type="text" id="direccion" name="direccion" required>
+          <!-- Botón para pasar al método de pago -->
+          <div class="nav-arrow" id="to-payment">Siguiente &rarr;</div>
+        </form>
+      </div>
+
+      <!-- Sección 2: Método de Pago (inicialmente oculta) -->
+      <div id="payment-method" class="hidden">
+        <!-- Flecha para volver a la información del cliente -->
+        <div class="nav-arrow" id="back-to-info">&larr; Volver</div>
+        <h2>Método de Pago</h2>
+        <form id="payment-form">
+          <label for="card-number">Número de Tarjeta:</label>
+          <input type="text" id="card-number" name="card-number" required>
+          <label for="expiry">Fecha de Expiración (MM/AA):</label>
+          <input type="text" id="expiry" name="expiry" placeholder="MM/AA" required>
+          <label for="cvv">CVV:</label>
+          <input type="text" id="cvv" name="cvv" required>
+          <!-- Botón para confirmar el pago -->
+          <button type="submit" id="confirm-payment">Confirmar Pedido</button>
+        </form>
+      </div>
+    </div>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 UnderSounds. Todos los derechos reservados.</p>
   </footer>
 
+  <!-- Se incluye el script con la lógica del carrito -->
   <script src="js/app.js"></script>
+  <!-- Aquí ya no se adjunta ningún listener inline para el submit -->
   <script>
-    // Renderizar el resumen del pedido
-    function renderOrderSummary() {
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      const summaryContainer = document.getElementById('order-summary');
-      const totalContainer = document.getElementById('order-total');
-      if (!summaryContainer) return;
+    document.addEventListener('DOMContentLoaded', () => {
+      // Renderizamos el carrito en el panel izquierdo
+      renderCart();
+      updateCartCount();
 
-      summaryContainer.innerHTML = '';
-      let total = 0;
+      // Transición al método de pago: validar que el formulario de cliente esté completo
+      const toPaymentBtn = document.getElementById('to-payment');
+      toPaymentBtn.addEventListener('click', () => {
+        const customerForm = document.getElementById('customer-form');
+        if (customerForm.checkValidity()) {
+          document.getElementById('customer-info').classList.add('hidden');
+          document.getElementById('payment-method').classList.remove('hidden');
+        } else {
+          customerForm.reportValidity();
+        }
+      });
 
-      if (cart.length === 0) {
-        summaryContainer.innerHTML = '<p>El carrito está vacío.</p>';
-      } else {
-        cart.forEach(item => {
-          total += item.price * item.quantity;
-          const div = document.createElement('div');
-          div.classList.add('order-item');
-          div.innerHTML = `<p>${item.title} - $${item.price} x ${item.quantity}</p>`;
-          summaryContainer.appendChild(div);
-        });
-        totalContainer.innerHTML = `<h3>Total: $${total.toFixed(2)}</h3>`;
-      }
-    }
-
-    document.addEventListener("DOMContentLoaded", function() {
-      renderOrderSummary();
-
-      document.getElementById('payment-form').addEventListener('submit', function(e) {
-        e.preventDefault();
-        // Aquí se implementaría la lógica real de pago
-        alert('Pago realizado con éxito.');
-        localStorage.removeItem('cart');
-        window.location.href = 'tienda.html';
+      // Flecha para volver a la información del cliente
+      const backToInfo = document.getElementById('back-to-info');
+      backToInfo.addEventListener('click', () => {
+        document.getElementById('payment-method').classList.add('hidden');
+        document.getElementById('customer-info').classList.remove('hidden');
       });
     });
   </script>
+  <!-- Cargamos confirmar_pedido.js, que asigna el listener al submit del formulario -->
+  <script src="js/confirmar_pedido.js"></script>
 </body>
 </html>
