--- a/edit_perfil.html
+++ b/edit_perfil.html
@@ -8,15 +8,20 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-    <div id="header-placeholder"></div>
-    <script>
+  <!-- Inyección del header -->
+  <div id="header-placeholder"></div>
+  <script>
     fetch('header.html')
-        .then(response => response.text())
-        .then(data => {
+      .then(response => response.text())
+      .then(data => {
         document.getElementById('header-placeholder').innerHTML = data;
-        });
-    </script>
+        // Después de cargar el header, inicializamos el carrito
+        setTimeout(() => {
+          updateCartCount();
+          updateCartDropdown();
+        }, 100);
+      });
+  </script>
   <!-- Contenido principal: Editar Perfil -->
   <main class="content edit-profile-page">
     <h2 class="logo">Editar Perfil</h2>
@@ -79,5 +84,6 @@
   </footer>
 
   <script src="js/main.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
