--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<div id="header-placeholder"></div>
-<script>
-  fetch('header.html')
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById('header-placeholder').innerHTML = data;
+  <!-- Inyección del header -->
+  <div id="header-placeholder"></div>
+  <script>
+    fetch('header.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('header-placeholder').innerHTML = data;
+        // Después de cargar el header, inicializamos el carrito
+        setTimeout(() => {
+          updateCartCount();
+          updateCartDropdown();
+        }, 100);
       });
-</script>
+  </script>
+
 
 <body>
   <!-- Menú de pestañas: Recientes, Best Of's, Tienda, Amigos -->
@@ -97,5 +104,7 @@
 
   <!-- Script principal -->
   <script src="js/main.js"></script>
+  <script src="js/app.js"></script>
+
 </body>
 </html>
