--- a/producto.html
+++ b/producto.html
@@ -6,6 +6,14 @@
   <title>UnderSounds - Producto</title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+    /* Estilos específicos para la página de producto */
+    main {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
   <!-- Inyección del header -->
@@ -15,18 +23,25 @@
       .then(response => response.text())
       .then(data => {
         document.getElementById('header-placeholder').innerHTML = data;
+        // Después de cargar el header, inicializamos el carrito
+        setTimeout(() => {
+          updateCartCount();
+          updateCartDropdown();
+        }, 100);
       });
   </script>
 
-  <main class="product-detail">
+  <main>
+    <h1 class="product-title" id="product-title">Título del Producto</h1>
     <div class="product-container">
-      <img id="product-image" src="assets/images/default.jpg" alt="Imagen del producto">
-      <div class="product-info">
-        <h2 id="product-title">Título del Producto</h2>
+      <div class="product-image">
+        <img id="product-image" src="assets/images/default.jpg" alt="Imagen del Producto">
+      </div>
+      <div class="product-description">
         <p id="product-description">Descripción detallada del producto.</p>
-        <p id="product-price" class="price">$0.00</p>
-        <button id="add-to-cart" data-id="">Añadir al Carrito</button>
-        <button id="add-to-favorites" data-id="">♡ Favorito</button>
+      </div>
+      <div class="product-price" id="product-price">
+        $0.00
       </div>
     </div>
   </main>
@@ -42,8 +57,6 @@
     // Obtener el id del producto de la URL (?id=...)
     const params = new URLSearchParams(window.location.search);
     const productId = params.get('id');
-
-    // Asegúrate de que la variable productCatalog ya está definida en app.js
     const product = productCatalog[productId];
 
     if (product) {
@@ -51,8 +64,10 @@
       document.getElementById('product-title').textContent = product.title;
       document.getElementById('product-description').textContent = product.description || 'Sin descripción disponible.';
       document.getElementById('product-price').textContent = `$${product.price}`;
-      document.getElementById('add-to-cart').setAttribute('data-id', productId);
-      document.getElementById('add-to-favorites').setAttribute('data-id', productId);
+    } else {
+      document.getElementById('product-title').textContent = "Producto no encontrado";
+      document.getElementById('product-description').textContent = "";
+      document.getElementById('product-price').textContent = "";
     }
   </script>
 </body>
