--- a/resumen_compra.html
+++ b/resumen_compra.html
@@ -11,14 +11,20 @@
 
 <body>
 
-    <div id="header-placeholder"></div>
-    <script>
-       fetch('header.html')
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('header-placeholder').innerHTML = data;
-        });
-    </script>
+  <!-- Inyección del header -->
+  <div id="header-placeholder"></div>
+  <script>
+    fetch('header.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('header-placeholder').innerHTML = data;
+        // Después de cargar el header, inicializamos el carrito
+        setTimeout(() => {
+          updateCartCount();
+          updateCartDropdown();
+        }, 100);
+      });
+  </script>
 
   <!-- Contenido principal: Resumen de compra -->
   <main class="content resumen-page">
@@ -65,5 +71,6 @@
   </footer>
 
   <script src="js/main.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
