--- a/generos.html
+++ b/generos.html
@@ -32,7 +32,7 @@
       <a href="generos especifico.html" class="card">Electrónica</a>
       <a href="generos especifico.html" class="card">Jazz</a>
       <a href="generos especifico.html" class="card">Reggaeton</a>
-      <a href="generos especifico.html" class="card">Tecno</a>
+      <a href="generos especifico.html" class="card">Techno</a>
       <a href="generos especifico.html" class="card">Hip Hop</a>
       <a href="generos especifico.html" class="card">Salsa</a>
       <a href="generos especifico.html" class="card">...</a>
